examples/test/testpolicy7810.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7810
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key40: value32
      key12: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value9
      podSelector:
        matchLabels:
          key22: value38
          key15: value27
